--- a/idopont/package.json
+++ b/idopont/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.1",
+    "bootstrap": "^5.3.3",
+    "json-server": "^1.0.0-beta.3",
     "pinia": "^3.0.1",
+    "toastification": "^0.1.5",
+    "vitest": "^3.0.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
