--- a/idopont/package.json
+++ b/idopont/package.json
@@ -14,14 +14,16 @@
     "json-server": "^1.0.0-beta.3",
     "pinia": "^3.0.1",
     "toastification": "^0.1.5",
-    "vitest": "^3.0.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/test-utils": "^2.4.0-alpha.2",
+    "jsdom": "^26.0.0",
     "vite": "^6.1.0",
-    "vite-plugin-vue-devtools": "^7.7.2"
+    "vite-plugin-vue-devtools": "^7.7.2",
+    "vitest": "^3.0.8"
   }
 }
